--- a/Final_Project_Om_opate22/settings/requirements.txt
+++ b/Final_Project_Om_opate22/settings/requirements.txt
@@ -51,6 +51,7 @@ psycopg2-binary==2.9.10
 pydantic==2.12.5
 pydantic_core==2.41.5
 PyJWT==2.10.1
+PyMySQL==1.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.2
